Use cache to compare changes

--- a/config.example.ini
+++ b/config.example.ini
@@ -4,3 +4,6 @@ port=5000
 bookmarks_file=/home/nivanov/.mozilla/firefox/rq1pmem1.default-release/places.sqlite
 compare_host=127.0.0.1
 compare_port=6000
+allow_delete=True
+allow_insert=True
+allow_update=True
